fixed pre word wrap

--- a/sass/02-components/_article.scss
+++ b/sass/02-components/_article.scss
@@ -136,6 +136,9 @@ article pre {
 	border: solid 1px $gray-200;
 	font-family: monospace;
 	font-size: 13px;
+	white-space: pre-wrap;       /* css-3 */
+	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+	word-wrap: break-word;
 }
 
 ol {
